corrigido alguns erros de portugues e mudado a ordem de certos itens

--- a/index.html
+++ b/index.html
@@ -5,28 +5,31 @@
     <title>Davi Presley Silva De Freitas</title>
 </head>
 <body>
-    <h1>Davi Presley Silva De Freitas</h1>
+    <h1><em>Davi Presley Silva De Freitas</em></h1>
     <img src="perfil.jpeg" alt="Eu olhandando a paisagem no topo de um morro" width="300px">
     <h2>Índice</h2>
     <ul>
-        <li><a href=#sm>Sobre mim</a></li>
-        <li><a href=#h>Habilidades</a></li>
-        <li><a href=#rs>Redes Sociais</a></li>
+        <li><a href=#sm>SOBRE MIM</a></li>
+        <li><a href=#h>SKILLS</a></li>
+        <li><a href=#rs>CONTATO</a></li>
     </ul>
     <h2 id=sm>Sobre mim</h2>
     <p>19 anos, Minas Gerais, Brazil<br>
-    Estudante de software web na Trybe
+    Apaixonado pela cultura romana/grega/nordica e a cultura geek no geral.<br>
+    Estudante de software web na Trybe 2021-2022
     </p>
-    <h2 id=h><strong>Habilidades</h2></strong>
+    <h2 id=h><strong>SKILLS</h2></strong>
     <ul>
         <li>Git</li>
-        <li>GitHub</li>
-        <li>HTML</li>
-        <li>CSS</li>
+        <li>Inglês(Intermediario)</li>
+        <li>HTML5</li>
+        <li>CSS3</li>
         <li>JAVASCRIPT</li>
+        <li>REACT</li>
     </ul>
-    <h2 id=rs>Redes Sociais</h2>
+    <h2 id=rs>CONTATO</h2>
     <a href="https://github.com/datavinny" target="_blank">GitHub</a><br>
     <a href="https://www.linkedin.com/in/datavinny/Linkedim" target="_blank">Linkedim</a>
+    Email: df828316@gmail.com
 </body>
 </html>
