--- a/index.html
+++ b/index.html
@@ -5,18 +5,17 @@
     <title>Davi Presley Silva De Freitas</title>
 </head>
 <body>
-    <h1><em>Davi Presley Silva De Freitas</em></h1>
-    <img src="perfil.jpeg" alt="Eu olhandando a paisagem no topo de um morro" width="300px">
-    <h2>Índice</h2>
     <ul>
         <li><a href=#sm>SOBRE MIM</a></li>
         <li><a href=#h>SKILLS</a></li>
         <li><a href=#rs>CONTATO</a></li>
     </ul>
+    <h1><em>Davi Presley Silva De Freitas</em></h1>
+    <img src="perfil.jpeg" alt="Eu olhandando a paisagem no topo de um morro" width="300px">
     <h2 id=sm>Sobre mim</h2>
     <p>19 anos, Minas Gerais, Brazil<br>
     Apaixonado pela cultura romana/grega/nordica e a cultura geek no geral.<br>
-    Estudante de software web na Trybe 2021-2022
+    Full Stack Web Development Student at Trybe 2021-2022
     </p>
     <h2 id=h><strong>SKILLS</h2></strong>
     <ul>
@@ -29,7 +28,7 @@
     </ul>
     <h2 id=rs>CONTATO</h2>
     <a href="https://github.com/datavinny" target="_blank">GitHub</a><br>
-    <a href="https://www.linkedin.com/in/datavinny/Linkedim" target="_blank">Linkedim</a>
+    <a href="linkedin.com/in/datavinny" target="_blank">Linkedim</a>
     Email: df828316@gmail.com
 </body>
 </html>
