--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </ul>
     <h2 id=rs>CONTATO</h2>
     <a href="https://github.com/datavinny" target="_blank">GitHub</a><br>
-    <a href="linkedin.com/in/datavinny" target="_blank">Linkedim</a>
+    <a href="https://www.linkedin.com/in/datavinny/" target="_blank">Linkedim</a><br>
     Email: df828316@gmail.com
 </body>
 </html>
