--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt_br">
 <head>
     <meta charset="UTF-8">
-    <title>Davi Presley Silva De Freitas</title>
+    <title>Portfolio</title>
 </head>
 <body>
     <ul>
@@ -14,7 +14,7 @@
     <img src="perfil.jpeg" alt="Eu olhandando a paisagem no topo de um morro" width="300px">
     <h2 id=sm>Sobre mim</h2>
     <p>19 anos, Minas Gerais, Brazil<br>
-    Apaixonado pela cultura romana/grega/nordica e a cultura geek no geral.<br>
+    Apaixonado pela cultura romana/grega/nordica.<br>
     Full Stack Web Development Student at Trybe 2021-2022
     </p>
     <h2 id=h><strong>SKILLS</h2></strong>
