mudança nos links do index

--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
 <body>
     <ul>
         <li><a href=#sm>SOBRE MIM</a></li>
-        <li><a href=#h>SKILLS</a></li>
-        <li><a href=#rs>CONTATO</a></li>
+        <li><a href=#skills>SKILLS</a></li>
+        <li><a href=#contato>CONTATO</a></li>
     </ul>
     <h1><em>Davi Presley Silva De Freitas</em></h1>
     <img src="perfil.jpeg" alt="Eu olhandando a paisagem no topo de um morro" width="300px">
-    <h2 id=sm>Sobre mim</h2>
+    <h2 id=sobremim>Sobre mim</h2>
     <p>19 anos, Minas Gerais, Brazil<br>
     Apaixonado pela cultura romana/grega/nordica.<br>
     Full Stack Web Development Student at Trybe 2021-2022
     </p>
-    <h2 id=h><strong>SKILLS</h2></strong>
+    <h2 id=skills><strong>SKILLS</h2></strong>
     <ul>
         <li>Git</li>
         <li>Inglês(Intermediario)</li>
@@ -26,7 +26,7 @@
         <li>JAVASCRIPT</li>
         <li>REACT</li>
     </ul>
-    <h2 id=rs>CONTATO</h2>
+    <h2 id=contato>CONTATO</h2>
     <a href="https://github.com/datavinny" target="_blank">GitHub</a><br>
     <a href="https://www.linkedin.com/in/datavinny/" target="_blank">Linkedim</a><br>
     Email: df828316@gmail.com
