--- a/index.html
+++ b/index.html
@@ -3,32 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <title>Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <ul>
-        <li><a href=#sm>SOBRE MIM</a></li>
-        <li><a href=#skills>SKILLS</a></li>
-        <li><a href=#contato>CONTATO</a></li>
-    </ul>
-    <h1><em>Davi Presley Silva De Freitas</em></h1>
-    <img src="perfil.jpeg" alt="Eu olhandando a paisagem no topo de um morro" width="300px">
-    <h2 id=sobremim>Sobre mim</h2>
+        <a class="index" href=#home>HOME</a>
+        <a class="index" href=#sobre>SOBRE MIM</a>
+        <a class="index" href=#skills>SKILLS</a>
+        <a class="index" href=#contato>CONTATO</a>
+
+    <h1 id="home">Davi Presley Silva De Freitas</h1>
+
+    <img id="foto-perfil" src="perfil.jpeg" alt="Davi Freitas" width="300px">
+
+    <h2 id=sobre>SOBRE MIM</h2>
+
     <p>19 anos, Minas Gerais, Brazil<br>
     Apaixonado pela cultura romana/grega/nordica.<br>
-    Full Stack Web Development Student at Trybe 2021-2022
+    2021-2022 Full Stack Web Development Student at Trybe.
     </p>
-    <h2 id=skills><strong>SKILLS</h2></strong>
+
+    <h2 id=skills>SKILLS</h2>
+
     <ul>
-        <li>Git</li>
         <li>Inglês(Intermediario)</li>
-        <li>HTML5</li>
-        <li>CSS3</li>
+        <li>Git</li>
+        <li>HTML</li>
+        <li>CSS</li>
         <li>JAVASCRIPT</li>
         <li>REACT</li>
     </ul>
+
     <h2 id=contato>CONTATO</h2>
+
     <a href="https://github.com/datavinny" target="_blank">GitHub</a><br>
-    <a href="https://www.linkedin.com/in/datavinny/" target="_blank">Linkedim</a><br>
-    Email: df828316@gmail.com
+    <a href="https://www.linkedin.com/in/datavinny/" target="_blank">Linkedim</a>
+    <p>df828316@gmail.com</p>
 </body>
 </html>
