add paginas internas

--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-        <a class="index" href=#home>HOME</a>
-        <a class="index" href=#sobre>SOBRE MIM</a>
-        <a class="index" href=#skills>SKILLS</a>
-        <a class="index" href=#contato>CONTATO</a>
+    <ul>
+       <li><a class="active" href=#home>HOME</a></li>
+       <li><a href=#sobre>SOBRE MIM</a></li>
+       <li><a href=skills.html>SKILLS</a></li>
+       <li style="float:right"><a href=contato.html>CONTATO</a></li>
+    </ul>
+    <br><h1 id="home">Davi Freitas</h1>
 
-    <h1 id="home">Davi Presley Silva De Freitas</h1>
-
-    <img id="foto-perfil" src="perfil.jpeg" alt="Davi Freitas" width="300px">
+    <img id="foto-perfil" src="perfil1.jpeg" alt="Davi Freitas" width="300px">
 
     <h2 id=sobre>SOBRE MIM</h2>
 
@@ -21,22 +22,5 @@
     Apaixonado pela cultura romana/grega/nordica.<br>
     2021-2022 Full Stack Web Development Student at Trybe.
     </p>
-
-    <h2 id=skills>SKILLS</h2>
-
-    <ul>
-        <li>Inglês(Intermediario)</li>
-        <li>Git</li>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>JAVASCRIPT</li>
-        <li>REACT</li>
-    </ul>
-
-    <h2 id=contato>CONTATO</h2>
-
-    <a href="https://github.com/datavinny" target="_blank">GitHub</a><br>
-    <a href="https://www.linkedin.com/in/datavinny/" target="_blank">Linkedim</a>
-    <p>df828316@gmail.com</p>
 </body>
 </html>
