adicionado icones nos links de contato

--- a/contato.html
+++ b/contato.html
@@ -14,8 +14,8 @@
      </ul>
     <h2 id=contato>CONTATO</h2>
 
-    <a href="https://github.com/datavinny" target="_blank">GitHub</a><br>
-    <a href="https://www.linkedin.com/in/datavinny/" target="_blank">Linkedim</a>
+    <a href="https://github.com/datavinny" target="_blank"><img src="imagens/github-icon.png" alt="github icon" width="50"></a><br>
+    <a href="https://www.linkedin.com/in/datavinny/" target="_blank"><img src="imagens/linkedin-icon.png" alt="linkedin icon" width="50"></a>
     <p>df828316@gmail.com</p>
 </body>
 </html>
