--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </ul>
     <br><h1 id="home">Davi Freitas</h1>
 
-    <img id="foto-perfil" src="perfil1.jpeg" alt="Davi Freitas" width="300px">
+    <img id="foto-perfil" src="imagens/perfil1.jpeg" alt="Davi Freitas" width="300px">
 
     <h2 id=sobre>SOBRE MIM</h2>
 
