div adicionado e pequena mudança de layout

--- a/contato.html
+++ b/contato.html
@@ -6,16 +6,24 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    <div class="barra">
     <ul>
         <li><a href=index.html>HOME</a></li>
-        <li><a href=#sobre>SOBRE MIM</a></li>
+        <li><a href=index.html>SOBRE</a></li>
         <li><a href=skills.html>SKILLS</a></li>
         <li style="float:right"><a class="active" href=contato.html>CONTATO</a></li>
      </ul>
-    <h2 id=contato>CONTATO</h2>
+    </div>
 
-    <a href="https://github.com/datavinny" target="_blank"><img src="imagens/github-icon.png" alt="github icon" width="50"></a><br>
+    <div class="contato">
+    <h1 id=contato>CONTATO</h1>
+
+    <a href="https://github.com/datavinny" target="_blank"><img src="imagens/github-icon.png" alt="github icon" width="50"></a>
+
     <a href="https://www.linkedin.com/in/datavinny/" target="_blank"><img src="imagens/linkedin-icon.png" alt="linkedin icon" width="50"></a>
-    <p>df828316@gmail.com</p>
+
+    <p>Email: df828316@gmail.com</p>
+
+    </div>
 </body>
 </html>
