--- a/index.html
+++ b/index.html
@@ -6,21 +6,31 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    <div class="barra">
     <ul>
        <li><a class="active" href=#home>HOME</a></li>
-       <li><a href=#sobre>SOBRE MIM</a></li>
+       <li><a href=index.html>SOBRE</a></li>
        <li><a href=skills.html>SKILLS</a></li>
        <li style="float:right"><a href=contato.html>CONTATO</a></li>
     </ul>
-    <br><h1 id="home">Davi Freitas</h1>
+</div>
 
-    <img id="foto-perfil" src="imagens/perfil1.jpeg" alt="Davi Freitas" width="300px">
+<div class="meunome">
+    <br><h1 id="home">Davi Presley Silva De Freitas</h1>
+</div>
 
-    <h2 id=sobre>SOBRE MIM</h2>
+<div class="foto">
+    <img src="imagens/perfil1.jpeg" alt="Davi Freitas">
+</div>
+
+    <div class="sobre">
+    <h2 id="sobre">SOBRE</h2>
 
     <p>19 anos, Minas Gerais, Brazil<br>
     Apaixonado pela cultura romana/grega/nordica.<br>
     2021-2022 Full Stack Web Development Student at Trybe.
     </p>
+</div>
+
 </body>
 </html>
