--- a/skills.html
+++ b/skills.html
@@ -6,20 +6,26 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    <div class="barra">
     <ul>
         <li><a href="index.html">HOME</a></li>
-        <li><a href=#sobre>SOBRE MIM</a></li>
+        <li><a href=index.html>SOBRE</a></li>
         <li><a class="active" href=skills.html>SKILLS</a></li>
         <li style="float:right"><a href=contato.html>CONTATO</a></li>
      </ul> 
+    </div>
 
-    <h2 id=skills>SKILLS</h2>
+    <div class="skills">
+    <h1>SKILLS</h1>
 
-    <p>Inglês(Intermediario)<br>
-       Git<br>
-        HTML<br>
-        CSS<br>
-    JAVASCRIPT<br>
+    <ul>
+   <li> Inglês(Intermediario)</li>
+   <li>Git</li>
+   <li> HTML</li>
+   <li> CSS</li>
+   <li>JAVASCRIPT</li>
+</ul>
+    </div>
    
 </body>
 </html>
