--- a/contato.html
+++ b/contato.html
@@ -6,14 +6,14 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <div class="barra">
+    <nav class="barra">
     <ul>
         <li><a href=index.html>HOME</a></li>
         <li><a href=index.html>SOBRE</a></li>
         <li><a href=skills.html>SKILLS</a></li>
         <li style="float:right"><a class="active" href=contato.html>CONTATO</a></li>
      </ul>
-    </div>
+    </nav>
 
     <div class="contato">
     <h1 id=contato>CONTATO</h1>
