--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <header class="barra">
+    <nav class="barra">
     <ul>
        <li><a class="active" href=#home>HOME</a></li>
        <li><a href=index.html>SOBRE</a></li>
        <li><a href=skills.html>SKILLS</a></li>
        <li style="float:right"><a href=contato.html>CONTATO</a></li>
     </ul>
-</header>
+</nav>
 
 <div class="meunome">
     <br><h1 id="home">Davi Presley Silva De Freitas</h1>
