--- a/contato.html
+++ b/contato.html
@@ -6,24 +6,23 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <nav class="barra">
-    <ul>
-        <li><a href=index.html>HOME</a></li>
-        <li><a href=index.html>SOBRE</a></li>
-        <li><a href=skills.html>SKILLS</a></li>
-        <li style="float:right"><a class="active" href=contato.html>CONTATO</a></li>
-     </ul>
-    </nav>
+    <header id="header" class="container">
+        <img src="imagens/Zahard_logo_transparent.png" alt="three_red_eyes_by_YCGMA">
+        <nav class="container nav-bar">
+            <a href=index.html>HOME</a>
+            <a href=sobre.html>SOBRE</a>
+            <a href=skills.html>SKILLS</a>
+            <a href=contato.html>CONTATO</a>
+        </nav>
+    </header>
 
-    <div class="contato">
-    <h1 id=contato>CONTATO</h1>
-
-    <a href="https://github.com/datavinny" target="_blank"><img src="imagens/github-icon.png" alt="github icon" width="50"></a>
-
-    <a href="https://www.linkedin.com/in/datavinny/" target="_blank"><img src="imagens/linkedin-icon.png" alt="linkedin icon" width="50"></a>
-
-    <p>Email: df828316@gmail.com</p>
-
-    </div>
+    <main  class="container">
+        <section id="contato" class="container">
+            <h3>CONTATO</h3>
+            <a href="https://github.com/datavinny" target="_blank"><img src="imagens/github-icon.png" alt="github icon" width="50"></a>
+            <a href="https://www.linkedin.com/in/datavinny/" target="_blank"><img src="imagens/linkedin-icon.png" alt="linkedin icon" width="50"></a>
+            <p>Email: df828316@gmail.com</p>
+        </section>
+    </main>
 </body>
 </html>
