--- a/skills.html
+++ b/skills.html
@@ -2,30 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Skills</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <nav class="barra">
-    <ul>
-        <li><a href="index.html">HOME</a></li>
-        <li><a href=index.html>SOBRE</a></li>
-        <li><a class="active" href=skills.html>SKILLS</a></li>
-        <li style="float:right"><a href=contato.html>CONTATO</a></li>
-     </ul> 
-    </nav>
-
-    <div class="skills">
-    <h1>SKILLS</h1>
-
-    <ul>
-   <li> Inglês(Intermediario)</li>
-   <li>Git</li>
-   <li> HTML</li>
-   <li> CSS</li>
-   <li>JAVASCRIPT</li>
-</ul>
-    </div>
-   
+    <header id="header" class="container">
+        <img src="imagens/Zahard_logo_transparent.png" alt="three_red_eyes_by_YCGMA">
+        <nav class="container nav-bar">
+            <a href=index.html>HOME</a>
+            <a href=index.html>SOBRE</a>
+            <a href=skills.html>SKILLS</a>
+            <a href=contato.html>CONTATO</a>
+        </nav>
+    </header>
+    
+    <main  class="container">
+        <section id="skills" class="container">
+                <ul><h3>Skills</h3>
+                    <li> Inglês(Intermediario)</li>
+                    <li>Git</li>
+                    <li>HTML, CSS</li>
+                    <li>JAVASCRIPT</li>
+                </ul>
+        </section>
+    </main>
 </body>
 </html>
