--- a/index.html
+++ b/index.html
@@ -6,31 +6,14 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <nav class="barra">
-    <ul>
-       <li><a class="active" href=#home>HOME</a></li>
-       <li><a href=index.html>SOBRE</a></li>
-       <li><a href=skills.html>SKILLS</a></li>
-       <li style="float:right"><a href=contato.html>CONTATO</a></li>
-    </ul>
-</nav>
-
-<div class="meunome">
-    <br><h1 id="home">Davi Presley Silva De Freitas</h1>
-</div>
-
-<div class="foto">
-    <img src="imagens/perfil1.jpeg" alt="Davi Freitas">
-</div>
-
-    <div class="sobre">
-    <h2 id="sobre">SOBRE</h2>
-
-    <p>19 anos, Minas Gerais, Brazil<br>
-    Apaixonado pela cultura romana/grega/nordica.<br>
-    2021-2022 Full Stack Web Development Student at Trybe.
-    </p>
-</div>
-
+    <header id="header" class="container">
+        <img src="imagens/Zahard_logo_transparent.png" alt="three_red_eyes_by_YCGMA">
+        <nav class="container nav-bar">
+            <a href=index.html>HOME</a>
+            <a href=sobre.html>SOBRE</a>
+            <a href=skills.html>SKILLS</a>
+            <a href=contato.html>CONTATO</a>
+        </nav>
+    </header>
 </body>
 </html>
