--- a/contato.html
+++ b/contato.html
@@ -19,8 +19,10 @@
     <main  class="container">
         <section id="contato" class="container">
             <h3>CONTATO</h3>
-            <a href="https://github.com/datavinny" target="_blank"><img src="imagens/github-icon.png" alt="github icon" width="50"></a>
-            <a href="https://www.linkedin.com/in/datavinny/" target="_blank"><img src="imagens/linkedin-icon.png" alt="linkedin icon" width="50"></a>
+            <div class="icons">
+                <a href="https://github.com/datavinny" target="_blank"><img src="imagens/github-icon.png" alt="github icon" width="50"></a>
+                <a href="https://www.linkedin.com/in/datavinny/" target="_blank"><img src="imagens/linkedin-icon.png" alt="linkedin icon" width="50"></a>
+            </div>
             <p>Email: df828316@gmail.com</p>
         </section>
     </main>
