--- a/skills.html
+++ b/skills.html
@@ -10,7 +10,7 @@
         <img src="imagens/Zahard_logo_transparent.png" alt="three_red_eyes_by_YCGMA">
         <nav class="container nav-bar">
             <a href=index.html>HOME</a>
-            <a href=index.html>SOBRE</a>
+            <a href=sobre.html>SOBRE</a>
             <a href=skills.html>SKILLS</a>
             <a href=contato.html>CONTATO</a>
         </nav>
