--- a/sobre.html
+++ b/sobre.html
@@ -21,8 +21,8 @@
 
         <aside id="sobre" class="container">
         <h3>Davi P. Silva De Freitas</h3>
-        <p>Eu sou o Davi, tenho 19 anos sou um estudante e nasci em Belo Horizonte, Minas gerais.<br>
-        Para mim a coisa mais importante é estar me melhorando tanto, mentalmente, estudando, quanto fisicamente, indo para a academia. Alem disso, gosto muito de ler e jogar.<br>
+        <p>Eu sou o Davi, tenho 19 anos, nasci em Belo Horizonte, MG.<br>
+        Para mim a coisa mais importante é estar me melhorando tanto, mentalmente, quanto fisicamente, indo para a academia. Alem disso, gosto muito de ler e jogar.<br>
         2021-2022 Full Stack Web Development Student at Trybe.
         </p>
         </aside>
