--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="/styles/style.css">
 </head>
 <body>
-    <header id="header" class="container">
-        <img src="imagens/Zahard_logo_transparent.png" alt="three_red_eyes_by_YCGMA">
-        <nav class="container nav-bar">
-            <a href=index.html>HOME</a>
-            <a href=sobre.html>SOBRE</a>
-            <a href=skills.html>SKILLS</a>
-            <a href=contato.html>CONTATO</a>
+    <header class="container header">
+      <img src="../imagens/zahard-logo.png" alt="three_red_eyes_by_SIU">
+        <nav class="container nav-header">
+          <a href=index.html>Home</a>
+          <a href=./pages/about.html>About Me</a>
+          <a href=./pages/abilities.html>Abilities</a>
         </nav>
     </header>
+    <footer class="footer">Copyright © 2022 datavinny</footer>
 </body>
 </html>
