chore: inglês > português

--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
 </head>
 <body>
     <header class="container header">
-      <img src="../imagens/zahard-logo.png" alt="three_red_eyes_by_SIU">
         <nav class="container nav-header">
           <a href=index.html>Home</a>
-          <a href=./pages/about.html>About Me</a>
-          <a href=./pages/abilities.html>Abilities</a>
+          <a href=./pages/about.html>Sobre mim</a>
+          <a href=./pages/abilities.html>Habilidades</a>
         </nav>
     </header>
     <footer class="footer">Copyright © 2022 datavinny</footer>
