--- a/pages/abilities.html
+++ b/pages/abilities.html
@@ -7,11 +7,10 @@
 </head>
 <body>
     <header class="container header">
-      <img src="../imagens/zahard-logo.png" alt="three_red_eyes_by_SIU">
         <nav class="container nav-header">
           <a href=../index.html>Home</a>
-          <a href=about.html>About Me</a>
-          <a href=abilities.html>Abilities</a>
+          <a href=about.html>Sobre mim</a>
+          <a href=abilities.html>Habilidades</a>
         </nav>
     </header>
     
@@ -21,8 +20,12 @@
               <h2>Skill Board</h2>
               <br>
               <li>JavaScript</li>
-              <li>Python</li>
+              <li>TypeScript</li>
               <li>HTML, CSS</li>
+              <li>React</li>
+              <li>Python</li>
+              <li>MySQL</li>
+              <li>Docker</li>
               <li>Git</li>
           </ul>
         </section>
