--- a/pages/about.html
+++ b/pages/about.html
@@ -7,11 +7,10 @@
 </head>
 <body>
     <header class="container header">
-        <img src="../imagens/zahard-logo.png" alt="three_red_eyes_by_SIU">
         <nav class="container nav-header">
           <a href=../index.html>Home</a>
-          <a href=about.html>About Me</a>
-          <a href=abilities.html>Abilities</a>
+          <a href=about.html>Sobre mim</a>
+          <a href=abilities.html>Habilidades</a>
         </nav>
     </header>
     <aside id="section-left">
@@ -20,7 +19,7 @@
       <nav id="social-links">
        <ul>
         <li>
-          <a href="https://www.linkedin.com/in/datavinny/" target="_blank"><img src="../imagens/linkedin-icon.png" alt="linkedin icon" width="50"></a>
+          <a href="https://www.linkedin.com/in/davifreitass/" target="_blank"><img src="../imagens/linkedin-icon.png" alt="linkedin icon" width="50"></a>
         </li>
         <li>
           <a href="https://github.com/datavinny" target="_blank"><img src="../imagens/github-icon.png" alt="github icon" width="50"></a>
@@ -29,11 +28,11 @@
       </nav>
      </aside>
     <main class="container">
-
         <section class="container about">
-        <h2>About Me</h2>
-        <p>
-          Oi! Meu nome é <strong>Davi Freitas</strong>, sou Brasileiro e atualmente moro Contagem - MG.
+        <h2>Sobre mim</h2>
+        <p>Oi! Meu nome é <strong>Davi Freitas</strong>, sou um programador web full stack, tenho 20 anos e atualmente moro Contagem - MG.
+          <br><br>
+          Em 2021 terminei o ensino medio e comecei a procurar um emprego, Eu ja sabia que queria mecher com a tecnologia mas não em qual parte exatamente foi ai que por recomendação de um amigo acabei conhecendo a Trybe(@betrybe), para entrar nela tive que fazer um teste de entrada e foi naquele momento que Eu soube que deveria ser um programador, ter que pensar em como usar as ferramentas ao meu dispor para estar resolvendo problemas foi algo que realmente me tocou.
         </p>
         </section>
     </main>
