refactor: React instalado

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <header class="container header">
         <nav class="container nav-header">
           <a href=index.html>Home</a>
-          <a href=./pages/about.html>Sobre mim</a>
-          <a href=./pages/abilities.html>Habilidades</a>
+          <a href=./src/pages/about.html>Sobre mim</a>
+          <a href=./src/pages/abilities.html>Habilidades</a>
         </nav>
     </header>
     <footer class="footer">Copyright © 2022 datavinny</footer>
