--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -8,7 +8,7 @@
 <body>
     <header class="container header">
         <nav class="container nav-header">
-          <a href=../index.html>Home</a>
+          <a href=../../index.html>Home</a>
           <a href=about.html>Sobre mim</a>
           <a href=abilities.html>Habilidades</a>
         </nav>
